2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&am_primary_prefixes): Now returns a list, not a
	hash.
	(&handle_libraries, &handle_ltlibraries, &handle_java)
	(&am_install_var): Adjust.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (@libtoolize_files, @libtoolize_sometimes): Rename
	as...
	(@libtool_files, @libtool_sometimes): these.
	($libtool_location): Remove, completely replaced by $seen_libtool.
	(&require_file_internal): Do not run libtoolize, that's
	autoreconf's job.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* tests/acoutnoq.test, tests/acoutput.test, tests/acoutqnl.test,
	* tests/acouttbs.test, tests/auxdir.test, tests/colon.test,
	* tests/colon2.test, tests/colon3.test, tests/colon4.test,
	* tests/colon5.test, tests/colon6.test, tests/colon7.test,
	* tests/conf2.test, tests/config.test, tests/depcomp.test,
	* tests/depcomp2.test, tests/discover.test, tests/fpinst2.test,
	* tests/fpinstall.test, tests/ldadd.test, tests/libobj7.test,
	* tests/libobj8.test, tests/output.test, tests/output2.test,
	* tests/output3.test, tests/output4.test, tests/output5.test,
	* tests/pr2.test, tests/remake.test, tests/remake2.test,
	* tests/remake3.test, tests/scripts.test, tests/stamph.test,
	* tests/subdir.test, tests/subdir2.test, tests/subdir4.test,
	* tests/tagsub.test, tests/texinfo8.test: Remove PACKAGE and VERSION
	assignments.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&scan_autoconf_traces): Use eq for equality.
	Anchor regexps.
	Remove dead comment.
	(&initialize_per_input): Don't initialize several times the same
	vars.

	
2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (scan_one_autoconf_file): When using %generalize, be
	sure to replace only words.  AC_FUNC_OBSTACK was matching
	M4_AC_FUNC_OBSTACK.

2001-10-26  Akim Demaille  <akim@epita.fr>

	* tests/stamph2.test: Strengthen.
	* tests/confh2.test, tests/confh3.test: Remove.
	These are bad tests: they don't check the effects, but some