@@ -1,5 +1,10 @@
 2001-10-28  Akim Demaille  <akim@epita.fr>
 
+	* automake.in: Various formatting changes.
+	(&variable_defined): Second argument is optional.
+
+2001-10-28  Akim Demaille  <akim@epita.fr>
+
 	* automake.in (&am_primary_prefixes): Now returns a list, not a
 	hash.
 	(&handle_libraries, &handle_ltlibraries, &handle_java)
